# adapter_app

./: .gitignore  Makefile  README.md  adapter.c  configure.ac  event_notifier.c  event_notifier.h  queue.h  vhost_loopback.c  vhost_loopback.h  vhost_user_blk.c  vhost_user_blk.h  vhost_user_can.c  vhost_user_can.h  vhost_user_console.c  vhost_user_console.h  vhost_user_gpio.c  vhost_user_gpio.h  vhost_user_input.c  vhost_user_input.h  vhost_user_loopback.c  vhost_user_loopback.h  vhost_user_rng.c  vhost_user_rng.h  vhost_user_sound.c  vhost_user_sound.h  virtio_blk.h  virtio_input.c  virtio_loopback.c  virtio_loopback.h  virtio_rng.c  virtio_rng.h
src/: Makefile.am  adapter.c  event_notifier.h  vhost_user_blk.c  vhost_user_input.h  vhost_user_rng.c  virtio_loopback.h  virtio_rng.h
